# abi-app-SL

./: .dockerignore  .gitignore  Dockerfile  QUERY_OPTIMIZATION_GUIDE.md  README.md  REDIS_SETUP.md  copy_data_to_container.sh  debug_upload.py  docker-compose.yml  env_example.txt  fake_ad_campaigns.csv  fake_brief.py  fake_data.py  main.py  postgres_setup.md  postgres_vector_app.py  requirements.txt  setup.sh  test_csv.py  test_excel_processing.py  test_redis_session.py  test_upload.py
chroma_db_5816190f/: chroma.sqlite3
container-backup/: admin_page.py  pyproject.toml  requirements.txt
data/: Telhio_GA4_User_Traffic_Data.xlsx  Telhio_Raw_Data.xlsx  fake_ad_campaigns.csv  fake_ad_campaigns_20.csv  my_output.txt  sample_data.csv
pages/: 1_Admin_Dashboard.py
