[project]
name = "abi-app"
version = "0.1.0"
description = "CSV Chat Application - Chat with your data in natural language"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.28.0",
    "pandas>=2.0.0",
    "openai>=1.0.0",
    "chromadb>=0.4.0",
    "python-dotenv>=1.0.0",
    "plotly>=5.15.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
